Object with particle system have wrong (expanded) selection region #66322

Closed
opened 2019-07-02 04:19:28 +02:00 by Vyacheslav Kobozev · 8 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-01 22:59, hash: 1278853849
blender-2.80-0fd96b4128ff-win64 already have this bug
Worked: 2.79 (sub 7), branch: blender2.7, commit date: 2019-05-23 08:19, hash: 054dbb833e, type: Release

Short description of error
When particle system in the scene it`s selection region is far from actual boundaries and overlap other bodies.
Here the video:
2019-07-02_05-09-00.mp4

Here the scene from video:
particleselection.blend

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-01 22:59, hash: `1278853849` blender-2.80-0fd96b4128ff-win64 already have this bug Worked: 2.79 (sub 7), branch: blender2.7, commit date: 2019-05-23 08:19, hash: 054dbb833e15, type: Release **Short description of error** When particle system in the scene it`s selection region is far from actual boundaries and overlap other bodies. Here the video: [2019-07-02_05-09-00.mp4](https://archive.blender.org/developer/F7559705/2019-07-02_05-09-00.mp4) Here the scene from video: [particleselection.blend](https://archive.blender.org/developer/F7559727/particleselection.blend)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Member

note: this seems to be problematic for halos (only)

note: this seems to be problematic for halos (only)
Clément Foucault was assigned by Philipp Oeser 2019-07-02 12:35:57 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

So yeah, issue is with PART_DRAW_DOT
@fclem: since you are on #63523 anyways, this seems to be more or less in the same area... mind checking?

So yeah, issue is with `PART_DRAW_DOT` @fclem: since you are on #63523 anyways, this seems to be more or less in the same area... mind checking?

This issue was referenced by bc0a0a1005

This issue was referenced by bc0a0a1005ba67292b9966d8e5bfe71c72c69fdc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66322
No description provided.