Fix T66322 Object with particle system have expanded selection region

This was caused by wrong pixsize calculation during selection.

Note that this was affecting selectability of lamps too.